[project]
name = "Ps-Comfy-TiHeaveN"
version = "0.1.0"
description = "A communication bridge between Photoshop plugins and ComfyUI servers, enabling AI image generation by connecting PS plugins to Comfy servers for model inference and image rendering."
authors = [
    {name = "TiHeaveN", email = ""},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
