[project]
name = "Ps-Comfy-TiHeaveN-CustomNodes"
description = "A communication bridge between Photoshop plugins and ComfyUI servers, enabling AI image generation by connecting PS plugins to Comfy servers for model inference and image rendering."
version = "1.0.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/tiheaven/Ps-Comfy-TiHeaveN-CustomNodes"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "tiheaven"
DisplayName = "Ps-Comfy-TiHeaveN-CustomNodes"
Icon = ""
includes = [] 
"requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

